@@ -18,12 +18,6 @@
 	<description>localjunit tests for xts</description>
         <properties>
             <buildType>11</buildType>
-            <general.server.jvm.args>-Xms64m -Xmx1024m -XX:MaxPermSize=512m
-                                     -Dorg.jboss.byteman.verbose
-                                    -Djboss.modules.system.pkgs=org.jboss.byteman
-                                    -Dorg.jboss.byteman.transform.all
-                                    -javaagent:${project.build.directory}/lib/byteman.jar=listener:true
-            </general.server.jvm.args>
             <ipv4.server.jvm.args></ipv4.server.jvm.args>
             <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
             <server.debug.args>Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5006</server.debug.args>
@@ -115,7 +109,7 @@
       							<!--
       							  Used in arquillian.xml
       							-->
-      							  <server.jvm.args>${general.server.jvm.args} ${ipv4.server.jvm.args}</server.jvm.args>
+      							  <server.jvm.args>${jvm.args.memory} ${ipv4.server.jvm.args}</server.jvm.args>
                                     <node.address>127.0.0.1</node.address>
       							</systemPropertyVariables>
       						</configuration>
@@ -146,7 +140,7 @@
 							<!--
 							  Used in arquillian.xml
 							-->
-							  <server.jvm.args>${general.server.jvm.args} ${ipv4.server.jvm.args}</server.jvm.args>
+							  <server.jvm.args>${jvm.args.memory} ${jvm.args.byteman} ${ipv4.server.jvm.args}</server.jvm.args>
                               <node.address>127.0.0.1</node.address>
 							</systemPropertyVariables>
 						</configuration>
@@ -178,7 +172,7 @@
 							<!--
 							  Used in arquillian.xml
 							-->
-							  <server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args}</server.jvm.args>
+							  <server.jvm.args>${jvm.args.memory} ${jvm.args.byteman} ${ipv6.server.jvm.args}</server.jvm.args>
                                                           <node.address>[::1]</node.address>
 							</systemPropertyVariables>
 						</configuration>
